Add WASM client support + SSR + PersistentComponentState

--- a/BlazorCalendar/BlazorCalendar/Components/Layout/MainLayout.razor
+++ b/BlazorCalendar/BlazorCalendar/Components/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@using BlazorCalendar.Client.Components.Layout
+
+@inherits LayoutComponentBase
 
 <div class="wrapper">
     <div class="page">
