--- a/BlazorCalendar/BlazorCalendar/Components/Pages/Identity/Register.razor
+++ b/BlazorCalendar/BlazorCalendar/Components/Pages/Identity/Register.razor
@@ -1,7 +1,7 @@
 ﻿@page "/sign-up"
 
 @using BlazorCalendar.UseCases.Identity
-@using BlazorCalendar.DTOs
+@using BlazorCalendar.Shared.DTOs
 
 @inject IRegisterUser registerUserUserCase
 @inject NavigationManager navigationManager
