--- a/BlazorCalendar/BlazorCalendar/Components/Pages/Identity/Login.razor
+++ b/BlazorCalendar/BlazorCalendar/Components/Pages/Identity/Login.razor
@@ -1,5 +1,6 @@
 ﻿@page "/login"
 
+@using BlazorCalendar.Shared
 @using BlazorCalendar.Shared.Common
 @using BlazorCalendar.UseCases.Identity
 @using Microsoft.AspNetCore.Authentication
